[package]
name = "annas_archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
thirtyfour = "0.31.0"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
undetected-chromedriver = "0.1.2"
bypass_cloudflare =  { path = "../bypass_cloudflare" }
indicatif = "0.17.7"
reqwest = { version = "0.11.21", features = ["stream"] }
futures-util = "0.3.14"