[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airbnb = { path = "../airbnb" }
annas_archive = { path = "../annas_archive" }
bypass_cloudflare =  { path = "../bypass_cloudflare" }
tokio = { version = "1.32.0", features = ["full"] }
undetected-chromedriver = "0.1.2"
url = "2.4.1"
reqwest = "0.11.22"